welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T = new Array[Color](getMondeHauteur())
	for (i1 <- 0 to getMondeHauteur() -1) {
		getCouleurSol()
		T(i1)
		avance()
	}
	for (i2 <- 0 to getMondeLargeur()-1) {
		avance()
		setCouleurBrosse(T(i1))
		baisseBrosse()
		leveBrosse()
	}
}
